# Ghost-Post-DRF

./: manage.py  pyproject.toml
drfplusreact/: asgi.py  settings.py  urls.py  wsgi.py
ghostpost/: models.py  serializers.py  urls.py  views.py
ghostpost/migrations/: 0001_initial.py  0002_auto_20210403_0653.py  0003_auto_20210403_0657.py  0004_auto_20210403_0707.py  0005_auto_20210403_1004.py
